# trading-simulator

./: .cursorignore  .gitignore  README.md  SPECIFICATION-FR.md  SPECIFICATION.md
.cursor/rules/: app-flow.mdc  documentation-guide.mdc  form-components.mdc  internationalization.mdc  project-requirements.mdc  project-structure.mdc  testing-guidelines.mdc  validation-system.mdc
app/: package-lock.json  package.json
app/trading-simulator/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
app/trading-simulator/doc/: calculation.md
app/trading-simulator/src/: App.tsx  i18n.ts  main.tsx
app/trading-simulator/src/components/: Button.tsx  Checkbox.tsx  DropPercentageInputList.tsx  FormSection.tsx  Input.tsx  Label.tsx  Select.tsx  Tabs.tsx  ThemeToggle.tsx  index.ts
app/trading-simulator/src/i18n/: en.json  fr.json  index.ts
app/trading-simulator/tests/: Header.test.tsx  LanguageSelector.test.tsx  README.md  calculatedCalculations.test.ts  calculationTypes.test.ts  calculations.test.ts  i18n.test.ts  manualCalculations.test.ts  setup.ts
documentation/: SPECIFICATION.md  app_flow_document.md  backend_structure_document.md  cursor_project_rules.md  frontend_guidelines_document.md  implementation_plan.md  project_requirements_document.md  tech_stack_document.md
tasks_generator/: README.md  pyproject.toml
tasks_generator/src/tasks_generator/: crew.py  crew_ui.py  main.py
tasks_generator/src/tasks_generator/config/: agents.yaml  tasks.yaml
tasks_generator/src/tasks_generator/doc/: TASKS.md
(+65 files in other folders)
